--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Preetam <3</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a href="aaa.txt" target="_blank">Download CV</a>
+                <a href="css" target="_blank">Download CV</a>
             </div>
         </div>
     </section>
