--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Preetam <3</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a href="css/3.py" target="_blank">Download CV</a>
+                <a href="PreetamKumari_CV.pdf" target="_blank">Download CV</a>
             </div>
         </div>
     </section>
@@ -67,7 +67,7 @@
                     <a href="https://www.linkedin.com/in/preetam-kumari-1a2883191/" target="_blank">My Linkedin</a>
                   <!--  <br>
                     <br> -->
-                    <a href="resume/PreetamKumari_Resume.pdf" target="_blank">My Resume</a>
+                    <a href="PreetamKumari_CV.pdf" target="_blank">My Resume</a>
                   <!--  <br>
                     <br> -->
                     <a href="https://github.com/PreetamKumari" target="_blank">My Github</a>
