--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <a href="https://www.linkedin.com/in/preetam-kumari-1a2883191/" target="_blank">My Linkedin</a>
                   <!--  <br>
                     <br> -->
-                    <a href="PreetamKumari_CV.pdf" target="_blank">My Resume</a>
+                    <a href="https://resume.io/r/Ii99f7W5Y" target="_blank">My Resume</a>
                   <!--  <br>
                     <br> -->
                     <a href="https://github.com/PreetamKumari" target="_blank">My Github</a>
