--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
     <footer>
       <div class="wrapper">
       <div class="icon instagram">
-        <div class="tooltip"><a href="https://www.instagram.com/preetam_kumari_/" target="_blank">Instagram</div>
+        <div class="tooltip"><a href="https://www.instagram.com/letslearnandgrow/" target="_blank">Instagram</div>
         <span><i class="fab fa-instagram"></i></span></a>
       </div>
 
@@ -327,7 +327,7 @@
           </div>
 
             <div class="icon Twitter">
-              <div class="tooltip"><a href="https://twitter.com/preetam271997Twitter" target="_blank">Twitter</div>
+              <div class="tooltip"><a href="https://twitter.com/preetam271997" target="_blank">Twitter</div>
               <span><i class="fab fa-twitter"></i></span></a>
             </div>
 
